# mpris-nowplaying

./: Cargo.toml  README.md
examples/: minimal.html
src/: main.rs
