[package]
name = "mpris-nowplaying"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/msparkles/mpris-nowplaying"
description = "A websocket based MPRIS2 \"now-playing\" / status client."
readme = "README.md"
license = "MIT"

categories = ["multimedia"]
keywords = ["dbus", "mpris", "music", "daemon", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "2.0.1"
log = "0.4.19"
env_logger = "0.10.0"
clap = { version = "4.3.21", features = ["derive"] }
tokio-tungstenite = "0.20.0"
tokio = { version = "1.31.0", features = ["full"] }
json = "0.12.4"
