[package]
name = "mpris-nowplaying"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/msparkles/mpris-nowplaying"
authors = ["Madeline Sparkles (madeline@mouse.lgbt)"]
description = "A websocket based MPRIS2 \"now-playing\" / status client."
readme = "README.md"
license = "MIT"

categories = ["multimedia"]
keywords = ["dbus", "mpris", "music", "daemon", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
regex = "1.11"

clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mpris = "2.0"
